Bug 1166280: max-width missing from bottom-actions, causing "top" and "new bug" buttons misalignment on the right edge of window

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -319,6 +319,7 @@ input[type="number"] {
 
 #bottom-actions {
     margin-bottom: 50px;
+    max-width: 1024px;
 }
 
 #bottom-right-actions {
